Worked further on BlogTopic component. Fixed alignment issue on AboutZettler component.

--- a/src/css/aboutzettler.css
+++ b/src/css/aboutzettler.css
@@ -5,7 +5,8 @@
 .innerContent {
     max-width: 1120px;
     margin: 0 auto;
-    height: 400px;
+    height: 330px;
+    padding: 35px 20px;
 }
 
 .aboutZettlerContainer {
@@ -16,12 +17,10 @@
 
 .aboutZettler {
     margin: 0 auto;
-    width: 90%;
-    height: 350px;
+    width: 100%;
+    height: 330px;
     background-color: rgb(28,109,235);
     color: white;
-    margin-top: 25px;
-    margin-bottom: 25px;
     font-family: 'Source Sans Pro';
 }
 
@@ -83,9 +82,9 @@
 }
 
 .zLogo img {
-    max-width: 88%;
-    margin-top: 200px;
-    margin-right: 50px;
+    max-width: 95%;
+    padding-left: 5%;
+    margin-top: 175px;
     transform: translateY(-50%);
 }
 
